1999-01-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Arguments.m (prefix): Make sure new string is terminated.
	(strip_quotes): New function.
	([Arguments_c -createEnd]): Use it.

1999-01-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* defobj.m (lispIn): Continue to support make-objc.
	(initDefobj): Set inhibitLoadFlag from either
	--no-init-file or SWARM_INHIBIT_ARCHIVER_LOAD environment variable.

	* DefClass.m ([CreatedClass_s -updateArchiver]): Use lispArchiver,
	instead of archiver.

	* defobj.m (initDefobj): Initialize hdf5Archiver and lispArchiver
	instead of single archiver.

	* Archiver.m (Application): Remove Lisp and HDF5 deep/shallow
	variants and accessors.
	(lisp_output_objects, hdf5_output_objects): Don't stop on nil
	Map members, but ignore them.
	([Archiver_c +createBegin:]): Initialize inhibitLoadFlag to NO.

	* Archiver.h (Archiver_c): Remove lispPath and hdf5Path.  Add path and
	hdf5Flag.  

	* Archiver.[hm], defobj.h (hdf5Archiver, lispArchiver): New
	globals.
	(archiver): Removed.
	([Archiver_c -putDeep:object:], [Archiver_c -putShallow:object:], 
	[Archiver_c -getObject:], [Archiver_c -setDefaultLispPath], 
	[Archiver_c -setDefaultHDF5Path]): New methods.
	Remove Lisp and HDF5 variants.

1999-01-21  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* DefObject.m (lisp_output_type): Don't print #:skipped, just
	print nil.
	([Object_s -_lispOut_:deep:]): Remove output space after typeName.

	* Arguments.m ([Arguments_c -_getSwarmHome_:]): Don't verify
	swarmHome if there wasn't one found.  Move findSwarm to the
	end, for when all else fails.
	(SIGNATURE_SUBPATH, SIGNATURE_PATH): Derive from INCLUDE_SUBPATH.

1999-01-20  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am (CURRENT): Bump.

	* HDF5Object.m (hdf5_not_available): Moved from defobj.m.

	* Archiver.[hm], defobj.h: Switch registration and get/put to
	object-oriented interface.

	* DefClass.m ([CreatedClass_s -updateArchiver]): Use lispPutShallow: